# 2022-planets

./: .buildinfo  .gitignore  README  challenges.html  conf.py  genindex.html  index.html  index.rst  levels.html  levels.rst  objects.inv  principles.html  pyproject.toml  references.html  references.rst  search.html  searchindex.js
.github/workflows/: deploy.yml
_modules/: index.html  root3.html  root4.html  root5.html
_sources/: challenges.rst.txt  index.rst.txt  principles.rst.txt
_sources/documentation/: level1.rst.txt  level2.rst.txt
_sources/extras/: coverage.rst.txt
_sources/formatting/: index.rst.txt  level1.rst.txt  level2.rst.txt  regions.rst.txt
_sources/ide/: extras.md.txt  index.rst.txt  installation.md.txt  settings.md.txt
_sources/publishing/: level2.rst.txt  level3.rst.txt  (+2 more)
documentation/: additions.html  additions.rst  index.html  index.rst  level1.html  level1.rst  level2.html
extras/: coverage.html
formatting/: index.html  level1.html  level2.html  level3.html  level3.rst  regions.html
ide/: extensions.html  extensions.md  extras.html  index.html  installation.html  settings.html  shortcuts.html  shortcuts.md
publishing/: index.html  index.rst  level1.html  level1.rst  level2.html  level3.html  modules.html  python_versions.html  python_versions.rst  tricky.html
testing/: index.html
typing/: index.html  index.rst  root0.html  root1.html  root1.py  root2.html  root2.py  root2.rst  root3.html  root3.py  root4.html  root4.py  root4.rst  root5.html  root5.py  root5.rst  root5_nodoc.html  root5_nodoc.py  tricky.html  tricky.rst
(+15 files in other folders)
